tests/tests/neg/surface/check_overflow00.rs
#[flux::check_overflow]
fn add(x: u32, y: u32) -> u32 {
    x + y //~ ERROR arithmetic operation may overflow
}
